--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,17 +1,45 @@
-*{
+/* *{
     background-color: white;
     color: black;
 }
-
 .container{
-    align-items: center !important;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  align-items: center !important;
+  height: 90vh;
+  display: flex;
+  justify-content: space-around;
+}
+.registerImg{
+  width: 80vh;
 }
 
-.form-container{
+/* CSS del registro(email & password */
+/* 
+.contenedor{
+  
+  display: flex;
+  box-sizing: border-box;
+  border: 0.5px solid #434343;
+  border-radius: 21px;
+  width: 61.81818181818182vh;
+  height: 75.8041958041958vh; 
+  flex-direction: column;
+}
+.titulo{
+  margin-top: 5vh;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: normal;
+}
+
+.contenedor-from{
+
+} */
+
+
+/* Fin registro */
+
+
+
+/* .form-container{
 box-sizing: border-box;
 width:  61.81818181818182vh;
 height: 75.8041958041958vh;
@@ -19,11 +47,9 @@ background: #FFFFFF;
 border: 0.5px solid #434343;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 21px;
-}
+} */
 
-.registerImg{
-    width: 80vh;
-}
+
 
 /* Css RegisterForm */
 
@@ -35,18 +61,10 @@ border-radius: 21px;
     margin-top: 10vh    ;
 }
 
-.containerForm{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-} */
+*/
 
-.titulo{
-    margin-top: 5vh;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-style: normal;
-}
 
+/* 
 .imputs-uno {
     margin-top: 5vh    ;
     width: 45vh;
@@ -75,16 +93,16 @@ border-radius: 21px;
 }
 
 /* Input container */
-.input-container {
+/* .input-container {
     position: relative;
     margin: 20px;
   }
   
   /* Input field */
-  .input-field {
+  /* .input-field {
     display: block;
-    margin: 5%;
-    width: 45vh;
+    margin: 1vh;
+    width: vh;
     height: 4vh;
     font-size: 16px;
     border: none;
@@ -92,19 +110,20 @@ border-radius: 21px;
     outline: none;
     background-color: transparent;
   }
-/* Input label */
-.input-label {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .apellidos{
+    display: block;
+    margin: 1vh;
+    width: vh;
+    height: 4vh;
     font-size: 16px;
-    color: rgba(204, 204, 204, 0);
-    pointer-events: none;
-    transition: all 0.3s ease;
-  }
-  
+    border: none;
+    border-bottom: 2px solid #ccc;
+    outline: none;
+    background-color: transparent;
+  } */ 
+
   /* Input highlight */
-  .input-highlight {
+  /* .input-highlight {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -113,13 +132,7 @@ border-radius: 21px;
     background-color: #007bff;
     transition: all 0.3s ease;
   }
-  
-  /* Input field:focus styles */
-  .input-field:focus + .input-label {
-    top: -20px;
-    font-size: 12px;
-    color: #007bff;
-  }
+
   .input-field:focus + .input-label + .input-highlight {
     width: 100%;
   }
@@ -171,4 +184,4 @@ border-radius: 21px;
   border: none;
   border-bottom: 2px solid #ccc;
   outline: none;
-}
+} */ 
