--- a/src/css/descriptionforum.css
+++ b/src/css/descriptionforum.css
@@ -7,7 +7,7 @@
 }
 
 .foro-picture{
-    border-radius: 100px;
+    border-radius: 5vh;
     width: 20vh;
     height: 20vh;
 }
@@ -15,19 +15,14 @@
 .descripcion{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+
     align-items: center;
     width: 100%;
     height: 30%;
-    /* border-bottom: 1px solid rgb(164, 164, 164); */
-    /* background-color: aqua; */
+
 }
 
 .multimedia-container{
-    width: 100%;
-    height: 70%;
-    background-color: aliceblue;
-    /* border: 1px solid black; */  
 
 
 }
