--- a/src/css/forum.css
+++ b/src/css/forum.css
@@ -21,30 +21,43 @@ html,body{
 }
 
 .titulo-contenedor{
+    display: flex;
+    justify-content: center;
+    align-items:  center;
     width: 100%;
     height: 10vh;
 }
 .contenedor-foros{
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
   width: 100%;
   height: 100%;
   
-  overflow: auto;
- 
 }
-.forum{
-    
+.forum{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 12vw;
     height: 20vh;
-    background-color: aliceblue;
     margin: 3vh;
-    border: 1px solid black;
-    
+    border: 0.5px solid rgb(164, 164, 164);
+    border-radius: 2vh;
 }
-
+.forum:hover{
+    background-color: rgba(241, 121, 241, 0.238);
+}
+.forum:active{
+    background-color: rgba(241, 121, 241, 0.238);
+}
 .foto{
     width: 7.5vh;
     height: 7.5vh;
     border-radius: 5vw;
 }
 
+.titulo-foros{
+    font-size: 3.5vh;
+}
