--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -27,6 +27,14 @@
 }
 .interesname{
     cursor: default;
+    width: auto;
+    height: auto;
+    background-color: rgba(228, 145, 213, 0.36);
+    margin: 5px;
+    border-radius: 2px;
+}
+.interesname p{
+    margin: 10px;
 }
 .principalcontainer{
     width: 100%;
@@ -35,6 +43,15 @@
     display: flex;
     padding: 5px 10%;
     flex-wrap: wrap;
+    width: auto;
+    height: auto;
+    
+}
+.contenedor-titulos{
+    width: auto;
+    height: auto;
+    background-color: #5654A8;
+    border: #001489;
 }
 .imagecontainer{
     position: static;
@@ -48,10 +65,10 @@
     flex-direction: column;
     gap: 2px;
     margin-top: -22rem;
-    width: 29%;
+    width: 30%;
     border: 1px solid rgb(var(--ig-elevated-separator));
     border-radius: 8px !important;
-    padding: 5px 2% ;
+
 
     background-color: rgb(var(--ig-primary-background));
     box-sizing: border-box;
@@ -99,6 +116,7 @@
    margin-top: 2rem;
 }
 
+
 .showfriends{
   background-color: var(--ig-primary-button);
   color: rgb(var(--ig-primary-background));
@@ -135,7 +153,7 @@
     justify-content: center;
     border: none;
     border-radius: 8px;
-    width: 20%;
+    width: 30%;
     height: 32px;
   
 }
@@ -254,7 +272,7 @@
 .containerssBox{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
 /* names */
@@ -335,4 +353,63 @@
     position: absolute;
     z-index: -1;
     
+}
+
+
+.centrar-comentsandbutton{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.comentario{
+    width: 70%;
+    border-radius: 10px;
+    border: 0.5px solid black;
+    height: 5vh;
+    
+}
+
+.comentario::placeholder{
+ padding: 4px;
+}
+
+.enviar-comentario{
+    border: none;
+    background-color: white;
+}
+
+.enviar-comentario svg{
+    fill: rgba(113, 16, 113, 0.467)
+}
+
+.enviar-comentario svg:hover{
+    fill:purple
+}
+
+.alinear-objetos{
+ margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.comentario-modal{
+    height: auto;
+    width: auto;
+    background-color: rgba(148, 148, 148, 0.382);
+    border-radius: 5px;
+    padding: 5px;
+ 
+    
+}
+
+.alinear-imagen-whit-coments{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.alejate{
+    font-size: 10px;
+    color: gray;
 }
