finish search bar and fixed bugs

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -6,7 +6,7 @@
     background-color: #E5C1FF;
     justify-content: space-between;
     align-items: center;
-    height: 65px;
+    height: 65px !important;
     padding: 5px 5%;
 
   }
