--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -62,7 +62,8 @@
 .friendContainer{
     
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 2px;
     margin-top: -22rem;
     width: 30%;
@@ -412,4 +413,15 @@
 .alejate{
     font-size: 10px;
     color: gray;
+}
+
+.portImageContainer{
+    border: 0.5px solid black;
+    border-radius: 1vh;
+}
+
+.amigoscontainer{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
